--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* header style start */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -41,14 +42,11 @@ header div ul li {
     margin-left: 25px;
 }
 
-a {
+header div ul li a {
     color: #ffffff;
     text-decoration: none;
 }
-
-p {
-    font-size: 16px;
-}
+/* header style end */
 
 .hero {
     height: 800px;
@@ -59,16 +57,7 @@ p {
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
+/* content style start */
 .content {
     width: 75%;
     display: inline-block;
@@ -93,6 +82,18 @@ p {
     font-size: 36px;
 }
 
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+/* content style end */
+
+/* benefits style start */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -119,7 +120,9 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/* benefits style end */
 
+/* footer style start */
 footer {
     padding: 30px;
     clear: both;
@@ -130,3 +133,4 @@ footer {
 footer h2 {
     font-size: 20px;
 }
+/* footer style end */
